# construction-drawing-ocr-parser

./: .gitignore  CHANGES_SUMMARY.md  COMPLETION_REPORT.md  DOCUMENTATION_INDEX.md  Dockerfile  FIX_SUMMARY.md  FRAGMENT_ANALYSIS.md  FRAGMENT_RECOVERY_DESIGN.md  GITHUB_DEPLOYMENT.md  PHASE1_PHASE2_IMPLEMENTATION.md  README.md  RULES.md  SKILLS.md  TOKEN_PARSER_DELIVERY_SUMMARY.md  TOKEN_PARSER_EXAMPLES.md  TOKEN_PARSER_README.md  TOKEN_PARSER_USAGE.md  VERIFICATION_RESULTS.md  compare_runs.py  config.py  debug_long_circuits.py  debug_paddle.py  debug_tiled_ocr.py  debug_ul1_el2.py  extract_circuits.py  inspect_output.py  pyproject.toml  requirements.txt  requirements_api.txt  token_parser.py  validate_fix.py  validate_joiner.py  validate_paddle.py  verify_7_changes.py
.claude/: CLAUDE.md  README.md
api/: main.py  schemas.py
models/: data_models.py
pipeline/: classifier.py  confidence_scorer.py  coordinate_mapper.py  deduplicator.py  fragment_recovery.py  geometry_analyzer.py  incomplete_panel_recovery.py  normalizer.py  ocr_engine.py  output_writer.py  panel_pattern_recognizer.py  panel_validator.py  pdf_renderer.py  preprocessor.py  regex_patterns.py  text_merger.py  tiler.py  zone_masker.py
tests/: conftest.py  create_test_pdf.py  test_accuracy.py  test_circuit_validation.py  test_classifier.py  test_geometry.py  test_integration.py  test_regex.py
tests/fixtures/: ground_truth.json  ground_truth.json.example
