[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "electrical-circuit-extractor"
version = "0.1.0"
description = "Layout-aware electrical panel and circuit number extractor for construction PDFs"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
where = ["."]
include = ["pipeline*", "models*"]
